--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
