--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^17.2.3",
     "express": "^4.17.1",
     "express-session": "^1.18.2",
     "mongoose": "^8.20.0",
     "morgan": "^1.10.1",
+    "node-fetch": "^3.3.2",
     "pug": "^3.0.3"
   },
   "devDependencies": {
