--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.18.2",
     "mongoose": "^8.20.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "pug": "^3.0.3"
   },
