--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Brian Benson",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/init.js"
+    "dev": "nodemon --exec babel-node src/init.js",
+    "assets": "webpack --config webpack.config.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -23,6 +24,9 @@
     "@babel/core": "^7.28.5",
     "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.5",
-    "nodemon": "^3.1.11"
+    "babel-loader": "^10.0.0",
+    "nodemon": "^3.1.11",
+    "webpack": "^5.103.0",
+    "webpack-cli": "^6.0.1"
   }
 }
