--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Brian Benson",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/init.js",
-    "assets": "webpack --config webpack.config.js"
+    "dev:server": "nodemon",
+    "dev:assets": "webpack"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -25,7 +25,12 @@
     "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.5",
     "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.4",
     "nodemon": "^3.1.11",
+    "sass": "^1.94.2",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
     "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1"
   }
